adding missing fields to rest method, fixing typo in COLLECTOR_AFFILIATION and other bug fixes
