# api/urls.py
@@ -5,7 +5,6 @@ from django.urls import path, re_path
 from .handlers import sample, person, general
 from django.shortcuts import redirect
 
-
 app_name = 'api'
 
 generic_api_patterns = [
@@ -18,10 +17,13 @@ generic_api_patterns = [
 ]
 
 dtol_api_patterns = [
-    #re_path(r'', general.forward_to_swagger, name='swagger'),
+    # re_path(r'', general.forward_to_swagger, name='swagger'),
     path('', general.forward_to_swagger),
     re_path(r'sample/get/(?P<id>[A-Za-z0-9]+)', sample.get, name='sample/get'),
+    re_path(r'manifest/(?P<manifest_id>[A-Z0-9a-f-]+)/sample_statuses', sample.get_sample_statuses_for_manifest,
+            name='get_sample_statuses_for_manifest'),
     re_path(r'manifest/(?P<manifest_id>[A-Z0-9a-f-]+)', sample.get_for_manifest, name='get_for_manifest'),
+
     re_path(r'sample/biosample_id/(?P<biosample_ids>[A-Z0-9, ]+)', sample.get_by_biosample_ids,
             name='get_by_biosample_ids'),
     re_path(r'sample/copo_id/(?P<copo_ids>[A-Za-z0-9, ]+)', sample.get_by_copo_ids, name='get_by_biosample_ids'),
